[gd_scene load_steps=12 format=3 uid="uid://c04ff6onow6xb"]

[ext_resource type="FontFile" uid="uid://bytudev7yq50b" path="res://UI/Font/TitilliumWeb-SemiBold.ttf" id="1"]
[ext_resource type="Script" path="res://Script/Trend.gd" id="3"]
[ext_resource type="Script" path="res://Script/TrendLine.gd" id="4"]
[ext_resource type="FontFile" path="res://UI/Font/Font16l.tres" id="5"]
[ext_resource type="Script" path="res://Script/Main.gd" id="6"]

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0, 0.439216, 0.47451, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0, 0.384314, 0.419608, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0, 0.439216, 0.47451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0, 0.384314, 0.419608, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0, 0.384314, 0.419608, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.113725, 0.278431, 0.380392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="ValveSearch" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("3")
text = "Velg ventil"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 35

[node name="PressureStart" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
placeholder_text = "BARG"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PressureStart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00469484
anchor_top = -0.0571429
anchor_right = 0.995305
anchor_bottom = 0.0285714
offset_left = -1.02348
offset_top = -21.0
offset_right = -1.02347
offset_bottom = -0.999999
theme_override_constants/line_spacing = 0
text = "Starttrykk"

[node name="PressureExternal" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
placeholder_text = "BARG"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PressureExternal"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -23.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
text = "Driftstrykk"

[node name="Temperatur" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
placeholder_text = "*C"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Temperatur"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -23.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
text = "Temperatur"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 35

[node name="PressureAfter" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
placeholder_text = "BARG"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PressureAfter"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -23.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
text = "Sluttrykk"

[node name="TestTime" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
placeholder_text = "Sekunder"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/TestTime"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -23.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
text = "Varighet"

[node name="Medie" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("5")
theme_override_styles/hover = SubResource("6")
theme_override_styles/pressed = SubResource("7")
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Gass"
popup/item_0/id = 0
popup/item_1/text = "Nitrogen"
popup/item_1/id = 1
popup/item_2/text = "VÃ¦ske"
popup/item_2/id = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Medie"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -21.0
offset_bottom = 5.0
grow_horizontal = 2
text = "Testmedie"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("4")
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("3")
text = " Simuler lekkasjerater "

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 45

[node name="Trend" type="ColorRect" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.219608, 0.219608, 0.219608, 1)
script = ExtResource("3")

[node name="TrendLine" type="Node2D" parent="VBoxContainer/MarginContainer2/Trend"]
unique_name_in_owner = true
script = ExtResource("4")

[node name="TrendLine2" type="Node2D" parent="VBoxContainer/MarginContainer2/Trend"]
unique_name_in_owner = true
script = ExtResource("4")

[node name="Seconds" type="Label" parent="VBoxContainer/MarginContainer2/Trend"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 23.0
offset_right = 42.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "SEKUNDER"

[node name="Pressure" type="Label" parent="VBoxContainer/MarginContainer2/Trend"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -31.0
offset_right = -42.0
offset_bottom = 35.0
grow_vertical = 2
theme_override_constants/line_spacing = -3
text = "BAR"
autowrap_mode = 3

[node name="Marks" type="Node2D" parent="VBoxContainer/MarginContainer2/Trend"]
position = Vector2(-1, -9)

[node name="MinSeconds" type="Label" parent="VBoxContainer/MarginContainer2/Trend"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -3.0
offset_right = 21.0
offset_bottom = 23.0
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxPressure" type="Label" parent="VBoxContainer/MarginContainer2/Trend"]
layout_mode = 0
offset_left = -37.0
offset_top = -11.0
offset_right = -2.0
offset_bottom = 15.0
text = "0"
horizontal_alignment = 2

[node name="MinPressure" type="Label" parent="VBoxContainer/MarginContainer2/Trend"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -11.0
offset_right = -4.0
offset_bottom = 15.0
grow_vertical = 0
text = "0"
horizontal_alignment = 2

[node name="MaxSeconds" type="Label" parent="VBoxContainer/MarginContainer2/Trend"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -3.0
offset_right = 18.0
offset_bottom = 23.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ValveSearch" to="." method="_open_Valve_search"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Medie" to="." method="_on_Medie_item_selected"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer/Button" to="." method="_run_calculations"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainer2/Trend" to="VBoxContainer/MarginContainer2/Trend" method="_on_Trend_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/MarginContainer2/Trend" to="VBoxContainer/MarginContainer2/Trend" method="_on_Trend_mouse_exited"]
[connection signal="resized" from="VBoxContainer/MarginContainer2/Trend" to="." method="_on_Trend_resized"]
[connection signal="resized" from="VBoxContainer/MarginContainer2/Trend" to="VBoxContainer/MarginContainer2/Trend" method="_on_Trend_resized"]
